...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/accountList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            />

        <View
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/divider"
            android:layout_alignParentBottom="true"
            >
            <ListView
                android:id="@+id/settingsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
        </FrameLayout>

...
