...
    <string name="warning_corrupted_provider_cert">Stored provider certificate is invalid. You can either update %s (recommended) or update the provider certificate using a commercial CA certificate.</string>
    <string name="warning_expired_provider_cert">Stored provider certificate is expired. You can either update %s (recommended) or update the provider certificate using a commercial CA certificate.</string>
    <string name="downloading_vpn_certificate_failed">Downloading the VPN certificate failed. Try again or choose another provider.</string>
    <string name="vpn_certificate_is_invalid">It\'s time to update your VPN certificate. Download a new certificate to keep your connection secure. This is a routine update.</string>
    <string name="save_battery">Save battery</string>
    <string name="subtitle_save_battery">Disabled while VPN Hotspot is on</string>
    <string name="save_battery_message">Background data connections will hibernate when your phone is inactive.</string>
    <string name="always_on_vpn">Always-on VPN</string>
    <string name="subtitle_always_on_vpn">Open Android System Settings</string>
    <string name="tethering">VPN Hotspot</string>
    <string name="ipv6Firewall">Block IPv6</string>
    <string name="require_root">Requires root permissions</string>
    <string name="show_experimental">Show experimental features</string>
...
    <string name="tethering_enabled_message">Please make sure to enable tethering in the <![CDATA[<b>system settings</b>]]> first.</string>
    <string name="tethering_message">Share your VPN with other devices via:</string>
    <string name="tethering_wifi">Wi-Fi hotspot</string>
    <string name="tethering_usb">USB tethering</string>
    <string name="tethering_bluetooth">Bluetooth tethering</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="always_on_vpn_user_message">To enable always-on VPN in Android VPN Settings click on the configure icon [img src] and turn the switch on.</string>
    <string name="always_on_blocking_vpn_user_message">To protect your privacy optimally, you should also activate the option \"Block connections without VPN\".</string>
    <string name="donate_title">Donate</string>
    <string name="donate_default_message">Please donate today if you value secure communication that is easy for both the end-user and the service provider.</string>
    <string name="donate_message">LEAP depends on donations and grants. Please donate today if you value secure communication that is easy for both the end-user and the service provider.</string>
    <string name="donate_button_remind_later">Remind me later</string>
    <string name="donate_button_donate">Donate</string>
...
