<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/provider_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderListActivity"
    android:padding="@dimen/stdpadding"
    style="@style/BitmaskActivity" >

    <include layout="@layout/loading_screen" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/provider_header" />

        <ListView
            android:id="@+id/provider_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false"
            android:layout_marginTop="@dimen/standard_margin"
            />

    </LinearLayout>

</RelativeLayout>
