<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2016 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              android:id="@+id/log_layout"
              tools:viewBindingIgnore="true"
    >

    <LinearLayout
        android:elevation="1dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <include layout="@layout/f_log_sliders"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/speed_waiting"
            android:singleLine="true"
            android:id="@+id/speed"
            tools:ignore="InconsistentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:transcriptMode="normal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>